<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_add_quotation"
        android:icon="@drawable/ic_baseline_playlist_add_24"
        android:title="@string/title_add_quotation"
        android:iconTint="#1000a1"/>

    <item
        android:id="@+id/navigation_quotation_sort"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="@string/title_quotation_order_by"/>

    <item
        android:id="@+id/navigation_quotation_delete_mode"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/quotation_delete_mode" />

    <item
        android:id="@+id/navigation_quotation_description"
        android:icon="@drawable/ic_baseline_description_24"
        android:title="@string/title_description" />

</menu>