<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:orientation="vertical"
    android:weightSum="100">

    <ImageButton
        android:id="@+id/back_arrow"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="8dp"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/ic_baseline_arrow_back_blue_48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sort_title_ASC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/quotation_content_background"
        android:drawableLeft="@drawable/ic_baseline_title_alt_24"
        android:drawablePadding="-30dp"
        android:elevation="4dp"
        android:gravity="center_horizontal"
        android:paddingLeft="35dp"
        android:paddingTop="10dp"
        android:paddingRight="3dp"
        android:paddingBottom="10dp"
        android:text="@string/title_order_by_ASC"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/sort_title_DESC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_arrow"
        app:layout_constraintVertical_chainStyle="packed">

    </TextView>

    <TextView
        android:id="@+id/sort_title_DESC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/quotation_content_background"
        android:drawableLeft="@drawable/ic_baseline_title_alt_24"
        android:drawablePadding="-20dp"
        android:elevation="4dp"
        android:gravity="center_horizontal"
        android:paddingLeft="35dp"
        android:paddingTop="10dp"
        android:paddingRight="13dp"
        android:paddingBottom="10dp"
        android:text="@string/title_order_by_DESC"
        android:textColor="#2B2B2B"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/sort_Author_ASC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sort_title_ASC">
    </TextView>

    <TextView
        android:id="@+id/sort_Author_ASC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/quotation_content_background"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="-40dp"
        android:elevation="4dp"
        android:gravity="center_horizontal"
        android:paddingLeft="35dp"
        android:paddingTop="10dp"
        android:paddingRight="13dp"
        android:paddingBottom="10dp"
        android:text="@string/author_order_by_ASC"
        android:textColor="#2B2B2B"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/sort_Author_DESC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sort_title_DESC">
    </TextView>

    <TextView
        android:id="@+id/sort_Author_DESC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/quotation_content_background"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="-40dp"
        android:elevation="4dp"
        android:gravity="center_horizontal"
        android:paddingLeft="35dp"
        android:paddingTop="10dp"
        android:paddingRight="13dp"
        android:paddingBottom="10dp"
        android:text="@string/author_order_by_DESC"
        android:textColor="#2B2B2B"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/sort_id_ASC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sort_Author_ASC">
    </TextView>

    <TextView
        android:id="@+id/sort_id_ASC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/quotation_content_background"
        android:drawableLeft="@drawable/ic_baseline_access_time_24"
        android:drawablePadding="-20dp"
        android:elevation="4dp"
        android:gravity="center_horizontal"
        android:paddingLeft="35dp"
        android:paddingTop="10dp"
        android:paddingRight="13dp"
        android:paddingBottom="10dp"
        android:text="@string/id_order_by_ASC"
        android:textColor="#2B2B2B"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/sort_id_DESC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sort_Author_DESC">
    </TextView>

    <TextView
        android:id="@+id/sort_id_DESC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/quotation_content_background"
        android:drawableLeft="@drawable/ic_baseline_access_time_24"
        android:drawablePadding="-20dp"
        android:elevation="4dp"
        android:gravity="center_horizontal"
        android:paddingLeft="35dp"
        android:paddingTop="10dp"
        android:paddingRight="13dp"
        android:paddingBottom="10dp"
        android:text="@string/id_order_by_DESC"
        android:textColor="#2B2B2B"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sort_id_ASC">
    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>